default page layout issues

--- a/less/toolbar.less
+++ b/less/toolbar.less
@@ -50,3 +50,7 @@
   display: inline-block;
   cursor: pointer !important;
 }
+
+.highed-toolbox-defaultpage {
+  overflow: auto;
+}
